--- a/styling/landing-css.css
+++ b/styling/landing-css.css
@@ -11,6 +11,7 @@ body {
 
 .footer {
     margin-top: auto;
+    color: white;
 }
 
 .container-1, .footer {
@@ -43,8 +44,6 @@ li {
 
 a {
     text-decoration: none;
-    color: #E5E7EB;
-    font-size: 18px;
 }
 
 .sign-up {
@@ -54,4 +53,33 @@ a {
     align-items: center;
 }
 
-.content {}
+.hero-main {
+    font-size: 48px;
+    font-weight: 900;
+    color: #F9FAF8;
+}
+
+.hero-secondary, a {
+    color: #E5E7EB;
+    font-size: 18px;
+}
+
+button {
+    padding: 8px;
+    background-color: #3882F6;
+    border-radius: 8px;
+}
+
+.info-main {
+    font-size: 36px;
+    font-weight: 900;
+    color: #1F2937;
+}
+
+.quote {
+    background-color: #E5E7EB;
+    color: #1F2937;
+    font-size: 36px;
+    font-weight: 300;
+    font-style: italic;
+}
