--- a/styling/landing-css.css
+++ b/styling/landing-css.css
@@ -68,6 +68,9 @@ button {
     padding: 8px;
     background-color: #3882F6;
     border-radius: 8px;
+    color: white;
+    width: 15%;
+    font-weight: 700;
 }
 
 .info-main {
@@ -82,4 +85,23 @@ button {
     font-size: 36px;
     font-weight: 300;
     font-style: italic;
+}
+
+.content {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+}
+
+.hero-secondary {
+    max-width: 300px;
+}
+
+.placeholder-img {
+    padding: 16px;
+}
+
+img {
+    border-radius: 10%;
 }
