--- a/styling/landing-css.css
+++ b/styling/landing-css.css
@@ -20,6 +20,7 @@ body {
 
 .container-1 {
     color: white;
+    padding-bottom: 24px;
 }
 
 .logo {
@@ -33,6 +34,12 @@ body {
 .header-logo {
     font-size: 24px;
     color: #F9FAF8;
+}
+
+.content {
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
 }
 
 ul {
