--- a/styling/landing-css.css
+++ b/styling/landing-css.css
@@ -92,6 +92,17 @@ button {
     font-size: 36px;
     font-weight: 900;
     color: #1F2937;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.images {
+    display: flex;
+}
+
+.card {
+    
 }
 
 .quote {
