Fixed image size and added subtext

--- a/styling/landing-css.css
+++ b/styling/landing-css.css
@@ -95,10 +95,22 @@ button {
     display: flex;
     justify-content: center;
     align-items: center;
+    margin: 32px;
+}
+
+img {
+   height: auto;
+   max-width: 100%;
+   border: 1px solid white;
+   border-radius: 10%;
 }
 
 .images {
     display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 24px;
+    margin: 32px;
 }
 
 .card {
