--- a/styling/landing-css.css
+++ b/styling/landing-css.css
@@ -120,6 +120,9 @@ img {
 .quote {
     background-color: #E5E7EB;
     color: #1F2937;
+}
+
+.quote-text {
     font-size: 36px;
     font-weight: 300;
     font-style: italic;
