--- a/styling/landing-css.css
+++ b/styling/landing-css.css
@@ -120,12 +120,23 @@ img {
 .quote {
     background-color: #E5E7EB;
     color: #1F2937;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 5%;
 }
 
 .quote-text {
     font-size: 36px;
     font-weight: 300;
     font-style: italic;
+    max-width: 65%;
+}
+
+.quote-person {
+    font-weight: 900;
+    font-size: 24px;
 }
 
 .call-to-action {
