--- a/styling/landing-css.css
+++ b/styling/landing-css.css
@@ -12,6 +12,8 @@ body {
 .footer {
     margin-top: auto;
     color: white;
+    text-align: center;
+    padding: 32px;
 }
 
 .container-1, .footer {
@@ -110,7 +112,7 @@ img {
     justify-content: center;
     align-items: center;
     gap: 24px;
-    margin: 32px;
+    margin: 0 72px 72px 72px;
 }
 
 .card {
@@ -124,7 +126,7 @@ img {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding: 5%;
+    padding: 7%;
 }
 
 .quote-text {
@@ -139,6 +141,33 @@ img {
     font-size: 24px;
 }
 
+.container-2 {
+    margin: 48px;
+}
+
 .call-to-action {
     background-color: #3882F6;
+    color: white;
+    border-radius: 8px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 32px;
+    margin: 48px;
+}
+
+.cta-main-text {
+    font-size: 24px;
+    font-weight: 700;
+}
+
+.cta-secondary-text {
+    font-size: 16px;
+    font-weight: 300
+}
+
+.btn {
+    border-radius: 8px;
+    border: 2px solid white;
+    padding: 0 16px;
 }
