--- a/styling/landing-css.css
+++ b/styling/landing-css.css
@@ -152,9 +152,9 @@ img {
     color: white;
     border-radius: 8px;
     display: flex;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
-    padding: 32px;
+    padding: 45px;
     flex-basis: 75%;
     margin: 48px 0 48px 0;
 }
@@ -172,5 +172,6 @@ img {
 .btn {
     border-radius: 8px;
     border: 2px solid white;
-    padding: 0 16px;
+    max-width: 100%;
+    padding: 8px 42px;
 }
